<resources>
    <string name="app_name">Quizz_Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduces_text">Interesting QUIZ Awaits You</string>
    <string name="introduce_2">play quizzes with your friends and get variuos prizes</string>
    <string name="number_test_12">12</string>
    <string name="points">Points</string>
    <string name="number_test_231">231</string>
    <string name="map">Map</string>
    <string name="question">Question</string>
    <string name="question_string">What is this thing?</string>
    <string name="pencil">Pencil</string>
    <string name="nice_work">Nice Work</string>
    <string name="you_earned">You Earned</string>
    <string name="value_80_pts"> 80 pts</string>
    <string name="next_stage">Next Stage</string>
    <string name="play_again">Play Again</string>
    <string name="back_to_home">Back to Home</string>
    <string name="finish">Finish</string>
</resources>