<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/violet"
        tools:context=".Container_Screen.Sub_Screen.ui.Intro_Screen">


        <ImageView
            android:id="@+id/background_notification"
            android:layout_width="600dp"
            android:layout_height="270dp"
            android:src="@drawable/bg_introduce"
            android:scaleType="centerCrop"
            android:text="@string/hello_blank_fragment"
            android:translationY="60dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_width="330dp"
            android:layout_height="330dp"
            android:layout_below="@+id/background_notification"
            android:layout_centerInParent="true"
            android:layout_marginTop="80dp"
            android:elevation="2dp"
            android:background="@drawable/bg_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_extrabold"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/introduces_text"
                android:textColor="@color/blue"
                android:textSize="30sp" />

            <TextView
                android:layout_width="270dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/introduce_2"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                app:dotsColor="@color/grey_2"
                app:dotsCornerRadius="8dp"
                app:dotsSize="16dp"
                app:dotsSpacing="4dp"
                app:dotsWidthFactor="2.5"
                app:progressMode="true"
                app:selectedDotColor="@color/orange" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@id/linearLayout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_border_button"
            android:drawableStart="@drawable/baseline_arrow_right_alt_24"
            android:paddingStart="17dp"
            android:paddingEnd="8dp"
            android:translationY="-30dp" />



    </RelativeLayout>
</layout>