<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/violet"
        tools:context=".Container_Screen.Sub_Screen.ui.ResultFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_width_40dp"
            android:layout_height="@dimen/dimen_height_40dp"
            android:src="@drawable/ic_navigation"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dimen_margin_start_26dp"
            android:layout_marginTop="58dp"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_height_40dp"
            android:text="@string/nice_work"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_text_size_30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCheck"
            android:layout_width="@dimen/dimen_width_150dp"
            android:layout_height="@dimen/dimen_width_150dp"
            android:src="@drawable/ic_check"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="5dp"
            android:scaleType="center"
            android:paddingTop="@dimen/dimen_padding_top_50dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutHorizontal"
            android:layout_width="@dimen/dimen_width_124dp"
            android:layout_height="@dimen/dimen_height_54dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCheck"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_height_54dp"
                android:src="@drawable/icon_star"
                android:padding="@dimen/dimen_padding_2dp"
                android:layout_weight="3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_height_54dp"
                android:src="@drawable/icon_star"
                android:padding="@dimen/dimen_padding_2dp"
                android:layout_weight="4" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_height_54dp"
                android:src="@drawable/ic_star_nothing"
                android:padding="@dimen/dimen_padding_2dp"
                android:layout_weight="3" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutHorizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_earned"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_textsize_24sp"
                android:fontFamily="@font/poppins_regular" />

            <Space
                android:layout_width="7dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_80_pts"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_textsize_24sp"
                android:fontFamily="@font/poppins_semibold" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_height_74dp"
                android:elevation="10dp"
                android:text="@string/next_stage"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/diment_textsize_18sp"
                android:background="@drawable/bg_button_common_orange" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_height_74dp"
                android:elevation="10dp"
                android:text="@string/play_again"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/diment_textsize_18sp"
                android:background="@drawable/bg_button_common_transparent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>