<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/violet"
        tools:context=".Container_Screen.Sub_Screen.ui.QuestionScreen.QuestionFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/firstChildLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_height_60dp"
            android:orientation="horizontal"
            android:padding="6dp"
            android:weightSum="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/dimen_width_60dp"
                android:layout_height="@dimen/dimen_height_60dp"
                android:layout_weight="2"
                android:padding="@dimen/dimen_padding_10dp"
                android:src="@drawable/baseline_chevron_left_24"
                android:translationY="-3dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/dimen_width_100dp"
                android:layout_height="@dimen/dimen_height_60dp"
                android:layout_weight="2"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/question"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_20sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/menu"
                android:layout_width="@dimen/dimen_width_60dp"
                android:layout_height="@dimen/dimen_height_60dp"
                android:layout_weight="2"
                android:padding="@dimen/dimen_padding_10dp"
                android:src="@drawable/baseline_more_vert_24"
                android:translationY="-3dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:id="@+id/space_20dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_height_20dp"
            app:layout_constraintTop_toBottomOf="@+id/firstChildLayout" />

        <ProgressBar
            android:id="@+id/progressHorizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/dimen_width_326dp"
            android:layout_height="@dimen/dimen_height_8dp"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/custom_progress_horizontal_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space_20dp" />

        <Space
            android:id="@+id/space_20dp_sc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_height_34dp"
            app:layout_constraintTop_toBottomOf="@+id/progressHorizontal" />

        <RelativeLayout
            android:id="@+id/secondChildLayout"
            android:layout_width="@dimen/dimen_width_326dp"
            android:layout_height="@dimen/dimen_height_250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_20dp_sc">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/questionLayoutLinear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_height_220dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_border"
                android:orientation="vertical">  <!--alignParentBottom căn cạnh dưới view con với cạnh dưới view cha-->
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_extrabold"
                    android:gravity="center_horizontal"
                    android:maxLines="3"
                    android:text="@string/question_string"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dimen_text_size_30sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_border_skin"
                android:src="@drawable/ic_pencil" />
        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutButton"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@+id/secondChildLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/answer1"
                android:layout_width="@dimen/dimen_witdth_300dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/pencil" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/answer2"
                android:layout_width="@dimen/dimen_witdth_300dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/pencil" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/answer3"
                android:layout_width="@dimen/dimen_witdth_300dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/pencil" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/answer4"
                android:layout_width="@dimen/dimen_witdth_300dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_state"
                android:text="@string/pencil" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>